# fuzzy_cp

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  fuzz.py  fuzzycp.py  fuzzycp.spec  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/fuzzycp/: __init__.py  __main__.py
