[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzycp"
version = "0.1.0"
description = "CLI for fuzzy matching filenames and copying or moving the best matches."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cli", "copy", "move", "fuzzy-matching", "rapidfuzz"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "rapidfuzz",
    "termcolor",
    "humanize",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/rsnemmen/fuzzy_cp"
Repository = "https://github.com/rsnemmen/fuzzy_cp"
Issues = "https://github.com/rsnemmen/fuzzy_cp/issues"

[project.scripts]
fuzzycp = "fuzzycp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
